--- a/Kaiserreich Korean Translation/localisation/KR_El_Salvador_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_El_Salvador_l_english.yml
@@ -89,7 +89,7 @@ ELS_coffee_exports_2_desc:0 "While the majority of other Central American countr
 ELS_coffee_exports_3:0 "Coffee Exports"
 ELS_coffee_exports_3_desc:0 "While the majority of other Central American countries are considered Banana Republics, we're unique in the fact that we lack large amounts of bananas and instead have large amounts of coffee. This makes us a desirable trade partner to others due to our monopoly on the item."
 
-ELS_coffee_exports_4:0 "Trade Economy"
+ELS_coffee_exports_4:0 "무역 "
 ELS_coffee_exports_4_desc:0 "The recent boom in foreign trade has made the majority of our economy based off of foreign trade. This has ensured economic prosperity for now, and surely for the future, right?"
 
 ELS_depression_revamped:0 "The Depression Revamped"
@@ -212,10 +212,10 @@ ELS_militirazation2_left_desc:0 "Our Military now stands ready for total war. We
 ELS_militirazation2_right:0 "Military Grants"
 ELS_militirazation2_right_desc:0 "Our Military now stands ready for total war. We've chosen to grant the army more resources in order to pay more soldiers and afford more equipment, and with the militarization efforts, we stand to be a force to be reckoned with in case of a war."
 
-ELS_memories_32_part_2:0 "Memories of '32"
+ELS_memories_32_part_2:0 "32년도의 기억"
 ELS_memories_32_part_2_desc:0 "The massacre of the socialists and indigenous people in Western El Salvador has left scars on our nation, with socialist guerrilla traitors lying around every corner. As the US collapsed, these tensions boiled over into a new rebellion, and now that we stand stronger than before, we need to focus on getting rid of the memory of such events if we wish to stay in power."
 
-ELS_memories_32_part_3:0 "Memories of '32"
+ELS_memories_32_part_3:0 "32년도의 기억"
 ELS_memories_32_part_3_desc:0 "The massacre of the socialists and indigenous people in Western El Salvador has left scars on our nation, with socialist guerrilla traitors lying around every corner. As the US collapsed, these tensions boiled over into a new rebellion, and now that we stand stronger than before, we need to focus on getting rid of the memory of such events if we wish to stay in power."
 
 ELS_native_rights_for_all:0 "Native Rights Expanded"
