--- a/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Union_State_l_english.yml
@@ -178,8 +178,8 @@ TEX_war_plan_violet2:0 "자색 전쟁 계획 - 선전포고"
 TEX_war_plan_brown1:0 "갈색 전쟁 계획 - 금수조치"
 TEX_war_plan_brown2:0 "갈색 전쟁 계획 - 선전포고"
 
-TEX_war_plan_lavender1:0 "War Plan Lavender - embargo"
-TEX_war_plan_lavender2:0 "War Plan Lavender - declare war"
+TEX_war_plan_lavender1:0 "라벤더색 전쟁 계획 - 금수조치"
+TEX_war_plan_lavender2:0 "라벤더색 전쟁 계획 - 선전포고"
 
 
 
@@ -326,9 +326,9 @@ TEX_forced_labor:0 "강제 노동"
 TEX_forced_labor_desc:0 "The loss of one hundred thousand people from the labor market has angered what used to be loyal Legionaries. Debates in the once quiet halls of Congress are erupting to demand Pelley find a solution to the lack of able-bodied workers in America. Pelley's solution? Forced labor for traitors at the service of the corporation that is the Commonwealth."
 TEX_jim_crows_america:0 "짐 크로의 미국"
 TEX_jim_crows_america_desc:0 "The way of life in the South that the northerner Pelley found, that of segregation and state laws that prevented blacks from exercising civil rights, struck Pelley as the true soul of America. Finally, with total control and the world to gain by acting, Pelley has begun to suggest northern states pass Jim Crow laws of their own."
-TEX_protecting_our_race:0 "Revive Nativism"
+TEX_protecting_our_race:0 "선천설 부활"
 TEX_protecting_our_race_desc:0 "The foundations of America as Pelley and Armstrong see it are connected not only to the former nation of Britain, but to Anglo Saxons as a race. An executive act by Pelley has illegalized inter-racial marriage, requiring all marriages to occur in Christian Identity churches, and the Silver Legion itself has been deployed to re-segregate schools."
-TEX_segregation_forever:0 "Segregation Forever"
+TEX_segregation_forever:0 "영원한 분리"
 TEX_segregation_forever_desc:0 "Our inability to stop protesters from returning each day despite the beatings and the bullets proved to be an intriguing challenge. The Silver Legion has decided to employ an overwhelming alliance to out-shout the dissidents by calling up segregationist organizations in the South and inviting them to the Capital."
 TEX_christian_commonwealth:0 "기독교 공동체"
 TEX_christian_commonwealth_desc:0 "Pelley's grand vision of the American Commonwealth is a country free of debt and bonds by turning the entire government into a gigantic corporation. Inalienable rights are given, not promised to native born Americans in the form of stocks that pay annual dividend or 'credits' to citizens that vote on their Silver Legion representative."
@@ -415,7 +415,7 @@ TEX_shock_and_awe:0 "충격과 공포"
 TEX_shock_and_awe_desc:0 "Trench warfare on the American continent can be brutal. We know from experience that fighting in Appalachia is biased towards the defender. Despite our better nature, we must employ the heaviest artillery shells in order to force our enemies to retreat."
 TEX_military_research:0 "군사 연구"
 TEX_military_research_desc:0 "After so many decades of isolation and the devastation of the civil war, our nation lacks the capacity for military research and development of the other great powers of the world. Let us begin to remedy this unfortunate reality."
-TEX_joint_chiefs_of_staff:0 "Joint Chiefs of Staff"
+TEX_joint_chiefs_of_staff:0 "합동참모본부"
 TEX_joint_chiefs_of_staff_desc:0 "The disputes common in the Federal inter service politics persist in our own government. In order to avoid this interdisciplinary contention from spilling over, we must ensure that all our Chiefs of Staff are given equal attention."
 TEX_womens_land_army:0 "여군"
 TEX_womens_land_army_desc:0 "The political backlash against us adopting a WAC type program for women was interesting. Our enemies have already shown strong success in women codebreaker, auxiliary forces and industrial technicians. Public opinion should be ignored in this case."
@@ -530,7 +530,7 @@ TEX_destroy_syndicalism:0 "생디칼리즘 궤멸"
 TEX_destroy_syndicalism_desc:0 "It has come time to push European Syndicalism out of the Americas once and for all. This latest imperial infringement upon our sovereignty will be stopped. All League members are implored to help in this great conflict."
 TEX_pax_americana:0 "팍스 아메리카나"
 TEX_pax_americana_desc:0 "Many doubted Huey Long's ability to rebuild America's reputation, these nay-sayers either defended Standard Oil or were naive to Syndicalism's true nature. His Imperial Presidency was able to overcome internal squabbles, as well as rally the truly democratic forces of the Americas."
-TEX_america_abroad:0 "America Abroad"
+TEX_america_abroad:0 "미국의 해외진출"
 TEX_america_abroad_desc:0 "It is an affront to all the American people that Federalist traitors would work to de-legitimize our government abroad. For this reason, we shall discard old ideas on isolationism and the obligations of the Monroe Doctrine for now. "
 TEX_dollar_diplomacy:0 "달러 외교"
 TEX_dollar_diplomacy_desc:0 "Although the US dollar is in disarray internally, it is still recognized as a currency abroad. We must leverage and reel in unnecessary money supply, or else formalize a floating currency with these future dependencies. "
@@ -538,7 +538,7 @@ TEX_business_ties:0 "사업 유대"
 TEX_business_ties_desc:0 "The existence of a common or floated currency gives our domestic businesses trust in investing abroad. We must actively promote this in other sovereign territories we do business with, as the potential gain exceeds the risks to either of us."
 TEX_joining_a_faction:0 "편을 정하다"
 TEX_joining_a_faction_desc:0 "Our diplomats must decide whether our old relations with the British Crown and France are worth re-engaging. Some think that the new growing power in Germany must be heeded, despite the intense hatred the American people have for German following the Weltkrieg."
-TEX_new_diplomatic_corps:0 "New Diplomatic Corps"
+TEX_new_diplomatic_corps:0 "새로운 외교관들"
 TEX_new_diplomatic_corps_desc:0 "Unfortunately, most of the diplomatic corps for the Federal government are either hostile to our government or already convicted traitors. We must repopulate our diplomatic corps with loyal and qualified representatives of America's interest."
 TEX_arsneal_of_america:0 "미국의 병기창"
 TEX_arsneal_of_america_desc:0 "We must revive the Civil War era concept of the Arsenal of the Republic, a cooperation between loyal private interest and national interest. Companies contracted within the Arsenal of America will be provided with ample tools to fight syndicalism."
