--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -296,7 +296,7 @@ CSA_unionist_economics:0 "노조주의자 경제정책"
 CSA_unionist_economics_desc:0 "비록 일부는 미국의 자본주의와 생디칼리즘이 결합된 정책을 옹호하지만, 우리가 구 체제와 타협할 수 없음은 명백합니다. 이제 노동조합들이 우리 경제를 지배하기 위해 일어나야 하며, 조합은 이제 연방정부의 모든 부분에 권한을 가지게 될 것입니다.“
 CSA_industrial_unionism:0 "노동자 의회"
 CSA_industrial_unionism_desc:0 "시장은 수요와 공급 또는 투자자의 변덕에 따라서 결정되었지만, 우리의 새로운 체제는 노동자에 의하여 만들어 질것입니다. 평의회는 노동자들이 그들이 보유한 코뮌과 지자체들을 최소한의 간섭을 받으며 자유롭게 감독해야 한다고 선언했습니다."
-CSA_workers_self_managment:0 "노동자 자기관리"
+CSA_workers_self_managment:0 "노동자 자주 경영"
 CSA_workers_self_managment_desc:0 "평의회의 위대한 목표는 미국 직장 안에 스며든 구시대의 계층 구조를 타바하는 것입니다. 그래서 법적으로 간부들과 주주들의 투표권을 불법화 했습니다. 그로 인해 지금 노동조합들은 모든 생산수단을 통제할 수 있게 된 것입니다!“
 CSA_industrial_democracy:0 "산업 민주주의"
 CSA_industrial_democracy_desc:0 "민주주의는 미국의 정체성 그 자체입니다. 그러나 공장의 문 앞에서는 민주주의는 마치 하찮은 잎 마냥 남아있었고, 그로 인해 미국인들이 작은 독재자들의 노예가 되었습니다. 이제 더 이상 이런 일은 없을 것입니다. 평의회는 민주적인 목표를 위해서 노동조합 간에 협력을 촉진할 새로운 산업 민주주의 위원회를 설립했습니다.“
