--- a/Kaiserreich Korean Translation/localisation/KR_Theorists_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Theorists_l_english.yml
@@ -37,7 +37,7 @@ kr_QIE_zhang_zuolin:0 "장작림"
 kr_QIE_ma_zhanshan:0 "마점산"
 kr_QIE_fengtian_haijun_xueyuan:0 "봉천 해군 학교"
 kr_QIE_zhang_xueliang:0 "장학량"
-kr_QIE_aog_board_der_industriellen_entwicklung:0 "일반동아시아회사 산업 발전 위원회"
+kr_QIE_aog_board_der_industriellen_entwicklung:0 "총동아시아회사 산업 발전 위원회"
 kr_QIE_alexander_von_falkenhausen:0 "알렉산더 폰 팔켄하우젠"
 kr_QIE_helmuth_ocn_mucke:0 "헬무트 폰 뮈커"
 kr_QIE_gunther_pluschow:0 "귄터 플뤼쇼"
@@ -84,8 +84,8 @@ osman_besim_bey:0 "Osman Besim Bey"
 BEL_Raoul_van_Overstraeten_mil_th:0 "라울 반 오베르스트라에텐"
 BEL_karel_jan_bossart:0 "카렐 얀 보샬트"
 BEL_Robert_Desmet_mil_th:0 "로버트 데스메트"
-FLN_Raoul_van_Overstraeten_mil_th:0 "라울 반 오베르스트라에텐"
-FLN_karel_jan_bossart:0 "카렐 얀 보샬트"
-FLN_Robert_Desmet_mil_th:0 "로버트 데스메트"
-WLL_Jules_Vincotte_mil_th:0 "쥘 빈코트"
-WLL_Andre_Becquet_mil_th:0 "안드레 베케르"
+#FLN_Raoul_van_Overstraeten_mil_th:0 "라울 반 오베르스트라에텐"
+#FLN_karel_jan_bossart:0 "카렐 얀 보샬트"
+#FLN_Robert_Desmet_mil_th:0 "로버트 데스메트"
+#WLL_Jules_Vincotte_mil_th:0 "쥘 빈코트"
+#WLL_Andre_Becquet_mil_th:0 "안드레 베케르"
