--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -31,10 +31,10 @@ USA_market_liberal_coalition_long:0 "National Unity Party"
 USA_social_conservative_coalition:0 "National Unity Party"
 USA_social_conservative_coalition_long:0 "National Unity Party"
 
-USA_market_lib_party:0 "Liberal Party"
-USA_market_lib_party_long:0 "Liberal Party"
-USA_social_con_party:0 "Constitution Party"
-USA_social_con_party_long:0 "Constitution Party"
+USA_market_lib_party:0 "자유당"
+USA_market_lib_party_long:0 "자유당"
+USA_social_con_party:0 "헌법당"
+USA_social_con_party_long:0 "헌법당"
 
 USA_paternal_autocrat_military_junta_long:0 "Military Junta"
 USA_paternal_autocrat_military_junta:0 "Military Junta"
