--- a/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Vietnam_l_english.yml
@@ -45,9 +45,14 @@ VIE_Caodai_welfare_state_idea:0 "Caodai welfare state"
 VIE_strengthen_competetiveness_idea:0 "Strengthened Competitiveness"
 VIE_deus_vult_idea:0 "Battle Catholics"
 
+### Tooltips ###
+VIE_policeunit_tt:0 "Four new police militias will form."
+VIE_eliteunit_tt:0 "Two new elite militias will form."
+VIE_massunit_tt:0 "Seven new militias will form throughout the nation."
+
 ### Focuses ###
 VIE_Imperial_Council:0 "Imperial Council"
-VIE_Imperial_Council:0 "The administrative system of Nguyen dynasty is literally a living fossil. The six boards were organised along the lines of traditional Chinese governments since the Tang dynasty. During the Duy Tan era, the system was slightly modified, but now it's terribly outdated. Even the most conservative ministers agree that the cabinet must be reorganised to adapt to new situation. We will hold an imperial council to reorganise the court."
+VIE_Imperial_Council_desc:0 "The administrative system of Nguyen dynasty is literally a living fossil. The six boards were organised along the lines of traditional Chinese governments since the Tang dynasty. During the Duy Tan era, the system was slightly modified, but now it's terribly outdated. Even the most conservative ministers agree that the cabinet must be reorganised to adapt to new situation. We will hold an imperial council to reorganise the court."
 VIE_Create_New_Forces:0 "Create New Forces"
 VIE_Army_Reorganization:0 "Army Reorganisation"
 VIE_The_End_Of_War:0 "The End Of War"
@@ -123,7 +128,7 @@ VIE_Enforce_Military_Discipline:0 "Enforce Military Discipline"
 VIE_Centralized_Command:0 "Centralised Command"
 VIE_Join_Kaiser_society:0 "Join Kaiser society"
 VIE_Regularize_Local_Forces:0 "Regularize Local Forces"
-VIE_Da_Lat_Academy:0 "Da Lat Academy"
+#VIE_Da_Lat_Academy:0 "Da Lat Academy" already defined above as an idea
 VIE_Reduce_Corruption:0 "Reduce Corruption"
 VIE_Independent_Policy:0 "Independent Policy"
 VIE_Imperial_Ambition:0 "Imperial Ambition"
